--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* General styling */
 .App {
   text-align: center;
   background-color: #000; /* Dark background */
@@ -24,7 +25,7 @@
 }
 
 .photo-wrapper-container.shift-left {
-  transform: translateX(-50%);
+  transform: translateX(-30%); /* Adjust the percentage as needed */
 }
 
 /* Photo wrapper */
@@ -49,27 +50,7 @@
   max-height: 100%; /* Ensure the image fits within its container */
 }
 
-/* Toggle button */
-.toggle-button {
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #007bff; /* NASA blue */
-  color: #fff;
-  border: none;
-  padding: 12px 24px; /* Increase padding for a larger button */
-  border-radius: 5px; /* Add border radius for rounded corners */
-  cursor: pointer;
-  z-index: 2;
-  font-family: Helvetica, Arial, sans-serif; 
-  font-size: 16px; /* Adjust font size */
-}
-.toggle-button:hover {
-  background-color: #0056b3; /* Darker shade of NASA blue on hover */
-}
-
-
+/* Description wrapper */
 .description-wrapper {
   display: none;
   position: absolute;
@@ -77,17 +58,72 @@
   right: 0;
   width: 50%;
   height: 100vh;
-  background-color: #000;
   padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(10px); /* Apply background blur */
+  background-color: rgba(255, 255, 255, 0.1); /* Transparent white background */
+  border-radius: 10px; /* Rounded corners */
+  border: 1px solid rgba(255, 255, 255, 0.2); /* Transparent border */
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3); /* Add shadow */
   z-index: 2;
   color: #fff;
-  font-family: Helvetica, Arial, sans-serif; 
+  font-family: Helvetica, Arial, sans-serif;
   font-size: 30px; /* Larger font size */
   line-height: 2.4; /* Increased line height for better readability */
   letter-spacing: 0.5px; /* Spacing out the letters */
+  overflow-y: auto; /* Enable vertical scrolling */
 }
 
 .description-wrapper.open {
   display: block;
+}
+
+/* Information button container */
+.info-button-container {
+  position: absolute;
+  bottom: 20px; /* Adjust bottom position */
+  left: 20px; /* Adjust left position */
+}
+
+.info-button {
+  background-color: white; /* Set button background color to white */
+  color: black; /* Set button text color to black */
+  border: 1px solid black; /* Add black border around the button */
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.info-button:hover {
+  background-color: #f0f0f0; /* Change background color on hover */
+}
+
+.info-button:focus {
+  outline: none; /* Remove focus outline */
+}
+
+/* Media queries for different device sizes */
+@media screen and (max-width: 768px) {
+  .photo-wrapper-container.shift-left {
+    transform: translateX(-20%); /* Adjust the percentage as needed */
+  }
+  
+  .description-wrapper {
+    width: 80%; /* Adjust width for smaller screens */
+    padding: 10px; /* Adjust padding for smaller screens */
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .photo-wrapper-container.shift-left {
+    transform: translateX(-10%); /* Adjust the percentage as needed */
+  }
+  
+  .description-wrapper {
+    width: 90%; /* Adjust width for smaller screens */
+    padding: 10px; /* Adjust padding for smaller screens */
+    font-size: 20px; /* Decrease font size for smaller screens */
+    line-height: 2; /* Adjust line height for smaller screens */
+  }
 }
